5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1807_2565.log
== TEST (2019-06-12 21:32:34) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))
z = int(input())
n = 0,75*z
a = zeros(3,dtype=int)

for i in range(size(x)):
	if x[i] >= 5 and y[i] >= n:
		a[0] += 1
	if x[i] < 5:
		a[1] += 1
	if y[i] >= n:
		a[2] += 1
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:35:00) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))
z = int(input())
n = 0,75*z
a = zeros(3,dtype=int)

for i in range(size(x)):
	if (x[i] >= 5) and (y[i] >= n):
		a[0] += 1
	if x[i] < 5:
		a[1] += 1
	if y[i] >= n:
		a[2] += 1
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:35:56) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))
z = int(input())
n = 0,75*z
a = zeros(3,dtype=int)

for i in range(size(x)):
	if x[i] >= 5
		if y[i] >= z:
			a[0] += 1
	if x[i] < 5:
		a[1] += 1
	if y[i] >= n:
		a[2] += 1
print(a)


-- ERROR:
File "XXXX", line 9
    if x[i] >= 5
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:36:02) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))
z = int(input())
n = 0,75*z
a = zeros(3,dtype=int)

for i in range(size(x)):
	if x[i] >= 5:
		if y[i] >= z:
			a[0] += 1
	if x[i] < 5:
		a[1] += 1
	if y[i] >= n:
		a[2] += 1
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:43:43) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))
z = int(input())
n = 0,75*z
a = zeros(3,dtype=int)

for i in range(size(x)):
	if x[i] >= 5:
		if y[i] >= z:
			a[0] += 1
	if x[i] < 5:
		a[1] += 1
	if y[i] >= n:
		a[2] += 1
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:46:43) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))
z = int(input())

a = zeros(3,dtype=int)

for i in range(size(x)):
	if x[i] >= 5 and y[i] >= (z*0.75):
		a[0] += 1
	if x[i] < 5:
		a[1] += 1
	if x[i] >= 5 and y[i] <= (z*0.75):
		a[2] += 1
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 21:47:06) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))
z = int(input())

a = zeros(3,dtype=int)

for i in range(size(x)):
	if x[i] >= 5 and y[i] >= (z*0.75):
		a[0] += 1
	if x[i] < 5:
		a[1] += 1
	if x[i] >= 5 and y[i] < (z*0.75):
		a[2] += 1
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 21:47:22) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))
z = int(input())

a = zeros(3,dtype=int)

for i in range(size(x)):
	if x[i] >= 5 and y[i] >= (z*0.75):
		a[0] += 1
	if x[i] < 5:
		a[1] += 1
	if x[i] >= 5 and y[i] < (z*0.75):
		a[2] += 1
print(a)


-- EXECUTION TIME:
0.918215
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
